# sam-invoice

./: pyproject.toml
.github/workflows/: ci.yml
fixtures/: customers.json
sam_invoice/: app.py  cli.py
sam_invoice/models/: article.py  base_crud.py  company.py  crud_article.py  crud_company.py  crud_customer.py  crud_product.py  customer.py  database.py
sam_invoice/ui/: article_detail.py  articles_view.py  base_widgets.py  customer_detail.py  customer_view.py  customers_view.py  preferences_dialog.py  products_view.py
tests/: conftest.py  test_cli.py  test_db_cli.py  test_models.py  test_ui_validation.py
tools/: build_macos.py
