[project]
name = "sam-invoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.10.1",
    "pytest>=7.0.0",
    "qtawesome>=1.4.0",
    "ruff>=0.1.0",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "poethepoet>=0.24.4",
    "pyinstaller>=6.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
lint.select = [
    "E",  # erreurs de style
    "F",  # erreurs de code
    "I",  # import
    "B",  # bugs
    "UP", # modernisation
]
exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "sam_invoice.egg-info",
]

[tool.poe.tasks]
console = {cmd = "ipython", help = "Opens python shell"}
format =  {cmd = "ruff format --check sam_invoice tests", help = "Formats all files"}
format-fix = {cmd = "ruff format sam_invoice tests", help = "Formats code"}
lint = {cmd = "ruff check sam_invoice tests", help = "Checks linting"}
lint-fix = {cmd = "ruff check --fix sam_invoice tests", help = "Fixes linting issues"}
tests = {cmd = "pytest", help = "Tests"}
check = {sequence = ["format", "lint", "tests"], help = "Runs format, lint and tests"}
fix = {sequence = ["lint-fix", "format-fix"], help = "Fixes linting issues and formats code"}
run = {cmd = "python ./sam_invoice/app.py -style macOS", help = "Run the application"}
build = {cmd = "python tools/build_macos.py", help = "Build macOS application bundle"}

[project.scripts]
sam-invoice = "sam_invoice.cli:main"

[tool.uv.build-backend]
module-root = "."

[tool.uv]
package = true

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
